fixed spacing between social-networks icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     /* Generic project styles */
 
     color: #3a3a3a;
-    font-family: 'Lato'sans-serif;
+    font-family: 'Lato' sans-serif;
 
 }
 
@@ -108,9 +108,12 @@ main {
 
 /*Footer*/
 
-footer {
-
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
 /* Media query: Tablets and larger (768px and up)*/
@@ -129,7 +132,7 @@ footer {
         display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
 
     }
@@ -152,8 +155,10 @@ footer {
 }
 
 /*Large devices (laptops and desktops, 992px and up)*/
+
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+    
 }
